<resources>
    <string name="app_name">WhacAMoleApp</string>
    <string name="welcome_logo">Welcome logo</string>
    <string name="result_image">Result image</string>
    <string name="welcome_title">Welcome to Whac-A-Mole</string>
    <string name="game_rules">Game rules: you must hit the most moles in 30 seconds</string>
    <string name="record_game">Record game</string>
    <string name="button_start">START</string>
    <string name="button_again">AGAIN</string>
    <string name="mole_hits">Hits:</string>
    <string name="timer_default">00:00</string>
    <string name="ib_mole">image button mole</string>
    <string name="record_text">Hit record: %s</string>
    <string name="hits_text">Hits: %d</string>
</resources>