<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_grass"
    tools:context=".presentation.GameFragment">

    <TextView
        android:id="@+id/tv_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/l_margin"
        android:layout_marginTop="@dimen/xxl_margin"
        android:text="@string/timer_default"
        android:textSize="@dimen/xl_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_countOfHits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/l_margin"
        android:text="@string/mole_hits"
        android:textSize="@dimen/xl_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_timer" />


    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/xl_margin"
        android:background="@color/green_grass"
        android:columnCount="3"
        android:orientation="horizontal"
        android:rowCount="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_countOfHits">

        <ImageButton
            android:id="@+id/ib_mole_1"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/m_margin"
            android:layout_marginTop="@dimen/m_margin"
            android:layout_marginEnd="@dimen/m_margin"
            android:layout_marginBottom="@dimen/m_margin"
            android:background="@drawable/mole_selector"
            android:contentDescription="@string/ib_mole"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_timer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/ib_mole_2"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/m_margin"
            android:layout_marginTop="@dimen/m_margin"
            android:layout_marginEnd="@dimen/m_margin"
            android:layout_marginBottom="@dimen/m_margin"
            android:background="@drawable/mole_selector"
            android:contentDescription="@string/ib_mole"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_timer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/ib_mole_3"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/m_margin"
            android:layout_marginTop="@dimen/m_margin"
            android:layout_marginEnd="@dimen/m_margin"
            android:layout_marginBottom="@dimen/m_margin"
            android:background="@drawable/mole_selector"
            android:contentDescription="@string/ib_mole"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_timer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/ib_mole_4"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/m_margin"
            android:layout_marginTop="@dimen/m_margin"
            android:layout_marginEnd="@dimen/m_margin"
            android:layout_marginBottom="@dimen/m_margin"
            android:background="@drawable/mole_selector"
            android:contentDescription="@string/ib_mole"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_timer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/ib_mole_5"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/m_margin"
            android:layout_marginTop="@dimen/m_margin"
            android:layout_marginEnd="@dimen/m_margin"
            android:layout_marginBottom="@dimen/m_margin"
            android:background="@drawable/mole_selector"
            android:contentDescription="@string/ib_mole"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_timer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/ib_mole_6"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/m_margin"
            android:layout_marginTop="@dimen/m_margin"
            android:layout_marginEnd="@dimen/m_margin"
            android:layout_marginBottom="@dimen/m_margin"
            android:background="@drawable/mole_selector"
            android:contentDescription="@string/ib_mole"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_timer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/ib_mole_7"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/m_margin"
            android:layout_marginTop="@dimen/m_margin"
            android:layout_marginEnd="@dimen/m_margin"
            android:layout_marginBottom="@dimen/m_margin"
            android:background="@drawable/mole_selector"
            android:contentDescription="@string/ib_mole"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_timer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/ib_mole_8"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/m_margin"
            android:layout_marginTop="@dimen/m_margin"
            android:layout_marginEnd="@dimen/m_margin"
            android:layout_marginBottom="@dimen/m_margin"
            android:background="@drawable/mole_selector"
            android:contentDescription="@string/ib_mole"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_timer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/ib_mole_9"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/m_margin"
            android:layout_marginTop="@dimen/m_margin"
            android:layout_marginEnd="@dimen/m_margin"
            android:layout_marginBottom="@dimen/m_margin"
            android:background="@drawable/mole_selector"
            android:contentDescription="@string/ib_mole"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_timer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>